2025-12-22T02:09:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20419617838 # 1685
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-22
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3875 / 0 3879 / +0 +4

2025-12-21T02:10:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20403230311 # 1683
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-21
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3873 / 0 3875 / +0 +2

2025-12-20T01:56:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20387369253 # 1681
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-20
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3871 / 0 3873 / +0 +2

2025-12-19T02:03:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20357371364 # 1679
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-19
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3869 / 0 3871 / +0 +2

2025-12-18T12:54:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20337638902 # 1678
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-18
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3868 / 0 3869 / +0 +1

2025-12-18T02:00:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20323427574 # 1677