@@ -1,3 +1,9 @@
+2025-12-22T12:53:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20432472345 # 1686
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-22
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3879 / 0 3883 / +0 +4
+
 2025-12-22T02:09:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20419617838 # 1685
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-22
